# NewPDF

./: .env.example  .gitignore  Dockerfile  README.md  REFACTOR_NOTES.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: idp.duckdb
deployments/: README.md
docs/: analytics.sql  api.md  architecture.md  usage.md
examples/sample_outputs/: id_card.json  invoice.json  tax_form.json
infrastructure/: observability.md
reports/: eval_results.json  eval_results.md  performance.md  resume_summary.md
scripts/: eval.py
src/idp/: __init__.py
src/idp/api/: main.py
src/idp/config/: schema.yaml  settings.py
src/idp/models/: __init__.py  extractor.py  layout_extractor.py
src/idp/ocr/: preprocess.py  tesseract_engine.py
src/idp/postprocess/: __init__.py  analytics.py  normalizers.py  validators.py
src/idp/services/: metrics.py  pipeline.py
src/idp/utils/: __init__.py  logging.py
src/intelligent_document_understanding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api_contracts.py  test_pipeline_e2e.py  test_validators.py
tests/fixtures/: synthetic.py
