[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-document-understanding"
version = "0.2.0"
description = "Lightweight rule-based PDF field extraction service (Tesseract OCR + regex schema mapping + cross-field validation) exposed via FastAPI."
authors = [{name = "IDP Team"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "pdf2image>=1.16",
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.9",
    "Pillow>=10.2",
    "numpy>=1.26",
    "duckdb>=0.10",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "orjson>=3.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "reportlab>=4.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
